# django_with_fastapi_integration

./: README.md  pyproject.toml
apps/core/api/: routers.py  schemas.py
config/: asgi.py  fastapi_init.py  settings.py
